--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ ul#menu li a {
             </div>
           </div>
           <div class="verticle">
-            <img class="image-top" src="web_318-750713.avif" alt="CSS developer picture">
+            <img class="image-top" src="web_318-750713.png" alt="CSS developer picture">
             <div class="verticle-title">
               CSS developer.
             </div>
@@ -275,7 +275,7 @@ ul#menu li a {
             </div>
           </div>
           <div class="verticle">
-            <img class="image-top" src="p4.avif" alt="Backend developer picture" style="width: 30px;">
+            <img class="image-top" src="p4.png" alt="Backend developer picture" style="width: 30px;">
             <div class="verticle-title">
               Backend developer.
             </div>
